# webpage_translation

./: .gitignore  CLAUDE.md  README.md  prd.txt  pyproject.toml
docs/superpowers/plans/: 2026-07-21-traveloka-locale-qa.md
docs/superpowers/specs/: 2026-07-21-traveloka-locale-qa-design.md
src/webpage_translation/: context.py  main.py
src/webpage_translation/driver/: actions.py  booking_form.py  browser.py  extract.py  fare_option.py  flight_card_tabs.py  flight_search.py  homepage.py  results.py
src/webpage_translation/qa/: allowlist.py  checker.py  detector.py  gemini_review.py  types.py
src/webpage_translation/qa/data/: brands.json
src/webpage_translation/report/: data.py  render.py
src/webpage_translation/report/templates/: index.html.j2  page.html.j2
tests/e2e/: test_fare_and_booking.py  test_flight_search.py  test_full_flow_th.py  test_results_and_fare.py
tests/fixtures/: visible_hidden.html
tests/integration/: conftest.py  test_extract_visible_texts.py  test_homepage_locale_switch.py
tests/unit/: test_allowlist.py  test_browser_wrapper.py  test_checker.py  test_detector.py  test_main_cli.py  test_report_data.py  test_report_render.py  test_types.py
