[project]
name = "webpage-translation"
version = "0.1.0"
description = "Locale QA for traveloka.com booking flow"
requires-python = ">=3.12,<3.13"
dependencies = [
    "lingua-language-detector>=2.0.2",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
webpage-translation = "webpage_translation.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webpage_translation"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/webpage_translation/qa", "src/webpage_translation/report"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "browser: requires a live Chrome + browser-use daemon (env RUN_BROWSER_TESTS=1)",
]
